# machine-learning-for-trading

./: .gitignore  pyproject.toml
data/: ^spx_d.csv  create_datasets.ipynb  create_stooq_data.ipynb
data/.ipynb_checkpoints/: create_datasets-checkpoint.ipynb
data/metadata us traded/: nasdaq_screener_1678107199623.csv  nasdaq_screener_1678107625631.csv  nasdaq_screener_1678108994665.csv
